# RPG

./: .gitattributes  .gitignore  Assembly-CSharp.csproj  LICENSE  README.md  RPG.sln
Assets/: New Terrain 1.asset  New Terrain 2.asset  New Terrain 3.asset  New Terrain.asset
Assets/Asset Packs/: Merienda-Bold SDF.asset
Assets/Camera/: -90 Animator.controller  90 Animator.controller  Camera Blend.asset  Camera.prefab  CameraSwitcher.cs  CameraSwitcher1.cs  Follow Camera -90.prefab  Follow Camera.prefab  Intro SequenceTimeline.playable
Assets/Characters/: Character.controller
Assets/Game/: Default Enemy Drops.asset  First NPC Dialogue.asset  New Dialogue 1.asset  New Dialogue.asset
Assets/Prefabs/: Campfire.prefab  (+20 more)
Logs/: ApiUpdaterCheck.txt
ProjectSettings/: EditorBuildSettings.asset  NavMeshAreas.asset  ProjectSettings.asset  TagManager.asset
Temp/: ApiUpdater_CheckMovedFrom10be8a4d41f504b8387c8253867198aa  Assembly-CSharp.dll.hash  CompilationLog.txt  UnityTempFile-38b8348261f6c4ef69958576e7729031  UnityTempFile-54ba1ae43369f4e2583f4a71378814c2  UnityTempFile-54df143dc1470475abc83bb6d222fd4e  UnityTempFile-5a6620fc11d0e4037805c051e93b7de0  UnityTempFile-b8cb74056bd9244a28fd47938e013d6d  UnityTempFile-c1f53324ae77f45658af2dd276b417f9  UnityTempFile-d07120bb88cea4eb6883b1d36cad90b5  UnityTempFile-e152fb5f065fd47a4a4471122021dfd8  UnityTempFile-f0e10de58e027460c9c5bf682c8d8ac8  UnityTempFile-fa2aff5895e6b4d50959fc26c18225fc
UserSettings/: EditorUserSettings.asset
cron/: commits.sh  index.py  pyproject.toml
cron/dailyGitActivity/: activityTracker.txt
(+663 files in other folders)
